# life-admin-orchestrator

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: check-arch.md  commit-pro.md  create-skill.md  finalize-release.md  fix-backend.md  new-feature.md  standardize-responses.md  test-gen.md  update-changelog.md  update-docs.md
.claude/docs/: technical_report.md
.claude/skills/skill-factory/: skill.md
.opencode/: README.md  architecture.md  conventions.md  workflow.md
.opencode/skills/check-arch/: SKILL.md
application/agents/: calendar_agent.py  contact_agent.py  document_agent.py  finance_agent.py
application/dtos/: calendar.py  contact.py  document.py  finance.py  user.py
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py
docs/: api.md
docs/adr/: 001-clean-architecture.md  002-hand-written-migrations.md  003-django-ninja-over-drf.md  004-pydantic-frozen-entities.md
domain/entities/: calendar.py  contact.py  document.py  finance.py  user.py
domain/exceptions/: calendar.py  contact.py  document.py  finance.py  user.py
domain/repositories/: calendar.py  contact.py  document.py  finance.py  unit_of_work.py  user.py
infrastructure/: di.py
infrastructure/django_app/: admin.py  apps.py  signals.py  views.py
infrastructure/repositories/: calendar.py  contact.py  document.py  finance.py  user.py
infrastructure/tasks/: calendar.py  contact.py  document.py  finance.py
tests/: conftest.py
tests/fakes/: repositories.py
(+152 files in other folders)
