[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "life-admin-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<6.0",
    "django-ninja>=1.3,<2.0",
    "pydantic>=2.7,<3.0",
    "celery[redis]>=5.4,<6.0",
    "langgraph>=0.2,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-core>=0.3,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-decouple>=3.8,<4.0",
    "redis>=5.0,<6.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "django-stubs>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "application*", "adapters*", "infrastructure*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"
